28. Jan 2012 Christoph Thielecke <crissi99@gmx.de>
	- content at comment widget display fix
	- made lib7zip optional (thanks to eduard bloch)
	- use pkgconfig info for mediainfo (thanks to eduard bloch)
	- define for mediainfo unicode added (thanks to eduard bloch)
	- security hardening flags added (thanks to eduard bloch)
	- flag for mediainfo static renamed from MEDIAINFO_LIBARY to MEDIAINFO_STATIC
	- string fixes (thanks to eduard bloch)
	- numeric overflow fixes (thanks to eduard bloch)
	- various typos fixed (thanks to eduard bloch)
	- various crash fixes at mp3tag (thanks to eduard bloch)
	- various bad memory usage fixes mp3tag (thanks to eduard bloch)

20. Nov 2011 Christoph Thielecke <crissi99@gmx.de>
	- filecount at advanced disk catalog csv import fixed

09. Oct 2011 Christoph Thielecke <crissi99@gmx.de>
	- setting medianame from foldername if not cd/dvd at adding media fixed
	- size handling at scanning fixed
	- size handling at import fixed
	- correct autogenerated file path for filename at export fixed if lastDir is empty
	- dont scan drives a: and b: on creating directory tree at adddialog

08. Oct 2011 Christoph Thielecke <crissi99@gmx.de>
	- reenabling some export options after switching back from xml to csv or html fixed
	- french translation updated (thanks to Josselin du PLESSIS)
	- set media name from cd/dvd only if selected or at scan time

12. Sep 2011 Christoph Thielecke <crissi99@gmx.de>
	- path name for archive file at gtktalog xml import fixed
	- import archive files with subfolders at gtktalog xml import fixed
	- print search result added
	- export search result as html added

11. Sep 2011 Christoph Thielecke <crissi99@gmx.de>
	- gtktalog xml import fixed
	- archivecontent is now imported at gtktalog xml import

14. Aug 2011 Christoph Thielecke <crissi99@gmx.de>
	- position of filelist extensions and max size for filecontent corrected 

11. Aug 2011 Christoph Thielecke <crissi99@gmx.de>
	- version changed to 1.5